// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LineChart snapshot > base layers matches snapshot 1`] = `
<div>
  <div
    class="recharts-responsive-container"
    style="width: 100%; height: 100%; min-width: 0;"
  >
    <div
      style="width: 0px; height: 0px; overflow: visible;"
    />
  </div>
</div>
`;

exports[`LineChart snapshot > default matches snapshot 1`] = `
<div>
  <div
    class="recharts-responsive-container"
    style="width: 100%; height: 100%; min-width: 0;"
  >
    <div
      style="width: 0px; height: 0px; overflow: visible;"
    />
  </div>
</div>
`;

exports[`LineChart snapshot > skeleton matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1vx1dtt"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 100%; min-width: 0;"
    >
      <div
        style="width: 0px; height: 0px; overflow: visible;"
      />
    </div>
    <div
      class="MuiBox-root css-16xxfrc"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-wave css-11jdrzx-MuiSkeleton-root"
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</div>
`;
